--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .navbar {
@@ -62,22 +63,22 @@ h2 {
   background-image: linear-gradient(to right, #ffd4cf, #fff3b0);
   height: 100%;
   display: flex;
+  gap: 20px;
   justify-content: space-between;
   font-family: Arial, sans-serif;
-  padding: 100px;
+  padding: 40px 100px;
 }
-
 .images-section {
   width: 50%;
   display: grid;
   grid-gap: 20px;
-  grid-area: span;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 200px 200px;
 }
 
 .images-section img {
   width: 100%;
-  height: 70%;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -94,12 +95,11 @@ h2 {
 .pic3 {
   grid-column: 1;
   grid-row: 2;
-  margin-top: -130px;
 }
 
 .text-section {
   padding: 10px;
-  width: 400px;
+  width: 500px;
   height: 50%;
   background-color: #ff7171;
   margin-top: 70px;
@@ -130,7 +130,6 @@ h2 {
   border-radius: 4px;
   cursor: pointer;
 }
-
 @media (max-width: 768px) {
   .navbar {
     width: 100%;
@@ -228,7 +227,7 @@ h2 {
     font-size: 24px;
   }
   .section2 {
-    padding: auto;
+    padding-top: 300px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -245,7 +244,6 @@ h2 {
   .pic3 {
     grid-column: auto;
     grid-row: auto;
-    margin-top: 0;
   }
 
   .text-section {
